<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Movie DB Hadi Challenge</string>
    <string name="developer_name">Yusuf AKSON</string>
    <string name="author_signature">powered by @yaksonn</string>
    <string name="about_app">Hadi Live challenge Android The Movie DB Application</string>
    <string name="search_text">Search</string>


    <!--MainAdtivity-->
    <string name="tab_movies_name">MOVIES</string>
    <string name="tab_tv_name">TV</string>
    <string name="tab_profile_name">PROFILE</string>


    <!--MoviesFragment-->
    <string name="movies_top_rated_title">Top Rated Movies</string>
    <string name="movies_popular_title">Popular</string>
    <string name="movies_now_playing_title">Now Playing</string>


    <!--ProfileFragment-->
    <string name="profile_title">Profile</string>
    <string name="about_app_text">About</string>
    <string name="version_app">Version</string>
    <string name="version_app_text">1.0.1</string>

    <!--MoviesDetails-->
    <string name="full_cast_text">Full Cast &amp; Crew</string>



</resources>
