<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/profimeImageContainer"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/bg_profile"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImageView"
            android:layout_width="96sp"
            android:layout_height="96sp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:src="@drawable/im_profile" />

        <TextView
            style="@style/WhiteBoldTextView"
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/developer_name"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        style="@style/LightGrayRegularTextView"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:padding="8dp"
        android:text="@string/about_app"
        android:textAlignment="center" />


    <LinearLayout
        android:id="@+id/aboutAppContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            style="@style/LightGrayRegularTextView"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:text="@string/version_app"
            android:textSize="20sp" />

        <TextView
            style="@style/LightGrayRegularTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:text="@string/version_app_text"
            android:textSize="18sp" />
    </LinearLayout>


    <TextView
        style="@style/LightGrayRegularTextView"
        android:id="@+id/powered_by_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:padding="8dp"
        android:text="@string/author_signature" />


</LinearLayout>